Dropdown cutoff content fix

--- a/src/components/organisms/Vault/vault.organism.module.scss
+++ b/src/components/organisms/Vault/vault.organism.module.scss
@@ -127,10 +127,10 @@
       }
 
       &.open {
-        max-height: 1000px;
+        max-height: 1400px;
 
         @include md() {
-          max-height: 700px;
+          max-height: 900px;
         }
       }
 
